feat: Configured swagger docs
